--- a/devel/py-cffi/Makefile
+++ b/devel/py-cffi/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.58 2024/11/11 07:28:03 wiz Exp $
+# $NetBSD: Makefile,v 1.59 2025/01/18 10:09:21 he Exp $
 
 DISTNAME=	cffi-1.17.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -21,4 +21,5 @@ USE_TOOLS+=	pkg-config
 
 .include "../../devel/libffi/buildlink3.mk"
 .include "../../lang/python/wheel.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
