--- a/net/wget2/Makefile
+++ b/net/wget2/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.16 2024/11/14 22:21:19 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2025/01/18 15:10:28 ryoon Exp $
 
-DISTNAME=	wget2-2.1.0
-PKGREVISION=	8
+DISTNAME=	wget2-2.2.0
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GNU:=wget/}
 EXTRACT_SUFX=	.tar.lz
