--- a/time/xfce4-orage/Makefile
+++ b/time/xfce4-orage/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.84 2024/12/27 08:20:45 wiz Exp $
+# $NetBSD: Makefile,v 1.85 2025/01/18 16:59:12 bsiegert Exp $
 
-VERSION=	4.18.0
+VERSION=	4.20.0
 DISTNAME=	orage-${VERSION}
 PKGNAME=	xfce4-orage-${VERSION}
-PKGREVISION=	14
 CATEGORIES=	time
 MASTER_SITES=	https://archive.xfce.org/src/apps/orage/${VERSION:R}/
 
@@ -38,6 +37,7 @@ SUBST_SED.zoneinfo+=	-e 's|zone\.tab|tab/zone_sun.tab|g'
 SUBST_SED.zoneinfo+=	-e 's|iso3166\.tab|tab/country.tab|g'
 .endif
 
+.include "../../devel/gettext-tools/msgfmt-desktop.mk"
 BUILDLINK_API_DEPENDS.glib2+=	glib2>=2.52.0
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
@@ -46,9 +46,7 @@ BUILDLINK_API_DEPENDS.glib2+=	glib2>=2.52.0
 .include "../../sysutils/libnotify/buildlink3.mk"
 BUILDLINK_API_DEPENDS.gtk3+=	gtk3+>=3.24.0
 .include "../../x11/gtk3/buildlink3.mk"
-BUILDLINK_API_DEPENDS.libxfce4ui+=	libxfce4ui>=4.16.0
 .include "../../x11/libxfce4ui/buildlink3.mk"
-BUILDLINK_API_DEPENDS.xfce4-panel+=	xfce4-panel>=4.16.0
 .include "../../x11/xfce4-panel/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 BUILDLINK_API_DEPENDS.libical+=	libical>=3.0
