--- a/databases/py-psycopg2/Makefile
+++ b/databases/py-psycopg2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.60 2024/11/11 07:27:57 wiz Exp $
+# $NetBSD: Makefile,v 1.61 2025/01/18 19:40:04 he Exp $
 
 DISTNAME=	psycopg2-2.9.10
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -15,4 +15,5 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 .include "../../lang/python/wheel.mk"
 .include "../../mk/pgsql.buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
