--- a/textproc/py-markupsafe/Makefile
+++ b/textproc/py-markupsafe/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2024/11/11 07:29:05 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2025/01/18 19:43:28 he Exp $
 
 DISTNAME=	markupsafe-3.0.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
@@ -15,4 +15,5 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 WHEEL_NAME=	MarkupSafe-${PKGVERSION_NOREV}
 
 .include "../../lang/python/wheel.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
