--- a/devel/py-zope.interface/Makefile
+++ b/devel/py-zope.interface/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2024/11/29 08:14:59 adam Exp $
+# $NetBSD: Makefile,v 1.13 2025/01/18 19:49:58 he Exp $
 
 DISTNAME=	zope.interface-7.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -18,4 +18,5 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-zope.event-[0-9]*:../../devel/py-zope.event
 TEST_DEPENDS+=	${PYPKGPREFIX}-zope.testing-[0-9]*:../../devel/py-zope.testing
 
 .include "../../lang/python/wheel.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
