--- a/graphics/SDL2_image/Makefile
+++ b/graphics/SDL2_image/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.27 2024/04/06 08:05:42 wiz Exp $
+# $NetBSD: Makefile,v 1.28 2025/01/19 09:27:03 wiz Exp $
 
 DISTNAME=	SDL2_image-2.6.3
 PKGREVISION=	3
@@ -6,7 +6,7 @@ CATEGORIES=	graphics devel
 MASTER_SITES=	http://www.libsdl.org/projects/SDL_image/release/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://www.libsdl.org/projects/SDL_image/
+HOMEPAGE=	https://github.com/libsdl-org/SDL_image
 COMMENT=	Load images as SDL surfaces
 LICENSE=	zlib
 
