--- a/net/ruby-net-smtp/Makefile
+++ b/net/ruby-net-smtp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2024/12/09 15:31:51 taca Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/19 11:07:21 taca Exp $
 
 DISTNAME=	net-smtp-0.5.0
 CATEGORIES=	net mail
@@ -9,6 +9,9 @@ COMMENT=	Simple Mail Transfer Protocol client library for Ruby
 LICENSE=	2-clause-bsd OR ruby-license
 
 USE_LANGUAGES=	# none
+
+# Ruby 3.4.1 has the same version as bundled gem.
+RUBY_VERSIONS_ACCEPTED=	31 32 33
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
