--- a/textproc/ruby-rexml/Makefile
+++ b/textproc/ruby-rexml/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2024/12/15 13:33:33 taca Exp $
+# $NetBSD: Makefile,v 1.26 2025/01/19 11:07:21 taca Exp $
 
 DISTNAME=	rexml-3.4.0
 CATEGORIES=	textproc
@@ -9,6 +9,9 @@ COMMENT=	XML toolkit for Ruby
 LICENSE=	2-clause-bsd
 
 USE_LANGUAGES=	# empty
+
+# Ruby 3.4.1 has the same version as bundled gem.
+RUBY_VERSIONS_ACCEPTED=	31 32 33
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
