--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.622 2025/01/14 13:36:14 ryoon Exp $
+# $NetBSD: Makefile,v 1.623 2025/01/19 13:49:00 ryoon Exp $
 
 FIREFOX_VER=		${MOZ_BRANCH}${MOZ_BRANCH_MINOR}
 MOZ_BRANCH=		134.0
-MOZ_BRANCH_MINOR=	
+MOZ_BRANCH_MINOR=	.1
 
 DISTNAME=	firefox-${FIREFOX_VER}.source
 PKGNAME=	${DISTNAME:S/.source//:S/b/beta/:S/esr//}
