--- a/devel/php-gearman/Makefile
+++ b/devel/php-gearman/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.39 2024/12/29 15:09:45 adam Exp $
+# $NetBSD: Makefile,v 1.40 2025/01/19 14:36:00 taca Exp $
 
 MODNAME=	gearman
-PECL_VERSION=	2.1.0
+PECL_VERSION=	2.1.4
 DISTNAME=	gearman-${PECL_VERSION}
-PKGREVISION=	18
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=php/}
 GITHUB_PROJECT=	pecl-networking-gearman
