--- a/devel/ruby-rspec-rails/Makefile
+++ b/devel/ruby-rspec-rails/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.53 2024/09/23 00:33:57 taca Exp $
+# $NetBSD: Makefile,v 1.54 2025/01/19 16:05:12 taca Exp $
 
-DISTNAME=	rspec-rails-6.1.5
+DISTNAME=	rspec-rails-7.1.0
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -18,7 +18,7 @@ DEPENDS+=	${RUBY_PKGPREFIX}-rspec-mocks>=3.13<4:../../devel/ruby-rspec-mocks
 
 USE_LANGUAGES=	# empty
 
-RUBY_RAILS_ACCEPTED=	61
+RUBY_RAILS_ACCEPTED=	72 71 70
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
