--- a/print/py-octoprint-filecheck/Makefile
+++ b/print/py-octoprint-filecheck/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.6 2024/11/11 07:28:53 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/19 16:15:00 adam Exp $
 
-DISTNAME=	OctoPrint-FileCheck-2024.3.27
+DISTNAME=	OctoPrint-FileCheck-2024.11.12
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
 CATEGORIES=	print python
 MASTER_SITES=	${MASTER_SITE_PYPI:=O/OctoPrint-FileCheck/}
