--- a/net/gallery-dl/Makefile
+++ b/net/gallery-dl/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.95 2024/12/29 19:04:11 leot Exp $
+# $NetBSD: Makefile,v 1.96 2025/01/19 16:29:06 leot Exp $
 
-DISTNAME=	gallery_dl-1.28.2
+DISTNAME=	gallery_dl-1.28.4
 PKGNAME=	${DISTNAME:S/_/-/}
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=g/gallery-dl/}
@@ -10,6 +10,7 @@ HOMEPAGE=	https://github.com/mikf/gallery-dl
 COMMENT=	Command-line program to download image galleries and collections
 LICENSE=	gnu-gpl-v2
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-requests>=2.11.0:../../devel/py-requests
 
 SUBST_CLASSES+=		paths
@@ -24,8 +25,5 @@ USE_LANGUAGES=			# none
 # Only for Python 3
 PYTHON_VERSIONS_INCOMPATIBLE=	27
 
-USE_PKG_RESOURCES=	yes
-
-.include "../../lang/python/batteries-included.mk"
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
