--- a/security/py-cryptodome/Makefile
+++ b/security/py-cryptodome/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.55 2024/10/12 08:52:38 wiz Exp $
+# $NetBSD: Makefile,v 1.56 2025/01/19 16:53:53 he Exp $
 
 DISTNAME=	pycryptodome-3.21.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/^py//}
@@ -30,4 +30,5 @@ PLIST_SUBST+=	SOEXT="abi3.so"
 
 BUILDLINK_API_DEPENDS.gmp+=	gmp>=5.0
 .include "../../devel/gmp/buildlink3.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
