--- a/devel/py-greenlet/Makefile
+++ b/devel/py-greenlet/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.27 2024/11/11 07:28:10 wiz Exp $
+# $NetBSD: Makefile,v 1.28 2025/01/19 16:58:53 he Exp $
 
 DISTNAME=	greenlet-3.1.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -26,4 +26,5 @@ USE_CXX_FEATURES+=	c++11
 GCC_REQD+=		8
 
 .include "../../lang/python/wheel.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
