--- a/cad/librecad/Makefile
+++ b/cad/librecad/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.88 2025/01/19 16:59:20 riastradh Exp $
+# $NetBSD: Makefile,v 1.89 2025/01/19 16:59:31 riastradh Exp $
 
 DISTNAME=	LibreCAD-2.2.0-rc2
 PKGNAME=	${DISTNAME:tl:S/-rc2/.rc2/g}
-PKGREVISION=	22
+PKGREVISION=	23
 CATEGORIES=	cad
 MASTER_SITES=	${MASTER_SITE_GITHUB:=LibreCAD/}
 GITHUB_PROJECT=	LibreCAD
@@ -49,9 +49,9 @@ INSTALLATION_DIRS+=	share/${PKGBASE}
 INSTALLATION_DIRS+=	lib/${PKGBASE}
 
 QMAKE_OPTIONS+=	CONFIG+=release
-QMAKE_OPTIONS+=	BOOST_DIR=${PREFIX}
-QMAKE_OPTIONS+=	BOOST_LIBDIR=${PREFIX}/lib
-QMAKE_OPTIONS+=	MUPARSER_DIR=${PREFIX}
+QMAKE_OPTIONS+=	BOOST_DIR=${BUILDLINK_DIR}
+QMAKE_OPTIONS+=	BOOST_LIBDIR=${BUILDLINK_DIR}/lib
+QMAKE_OPTIONS+=	MUPARSER_DIR=${BUILDLINK_DIR}
 QMAKE_OPTIONS+=	QMAKE_LFLAGS_RELEASE=
 QMAKE_OPTIONS+=	DISABLE_POSTSCRIPT=true
 
