--- a/textproc/py-regex/Makefile
+++ b/textproc/py-regex/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.58 2024/11/11 07:29:08 wiz Exp $
+# $NetBSD: Makefile,v 1.59 2025/01/19 17:04:01 he Exp $
 
 DISTNAME=	regex-2024.11.6
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -17,4 +17,5 @@ do-test:
 	${PYTHONBIN} -m regex.test_regex
 
 .include "../../lang/python/wheel.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
