--- a/net/k6/Makefile
+++ b/net/k6/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2024/09/06 18:48:51 bsiegert Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/19 17:23:41 leot Exp $
 
-DISTNAME=	k6-0.52.0
-PKGREVISION=	2
+DISTNAME=	k6-0.56.0
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=grafana/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
