--- a/security/sops/Makefile
+++ b/security/sops/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2024/09/06 18:48:56 bsiegert Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/19 18:21:06 leot Exp $
 
-DISTNAME=	sops-3.8.1
-PKGREVISION=	8
+DISTNAME=	sops-3.9.3
 CATEGORIES=	security
 MASTER_SITES=	${MASTER_SITE_GITHUB:=getsops/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
