--- a/math/py-numpy/Makefile
+++ b/math/py-numpy/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.130 2025/01/05 08:58:03 adam Exp $
+# $NetBSD: Makefile,v 1.131 2025/01/19 18:56:03 wiz Exp $
 
-DISTNAME=	numpy-2.2.1
+DISTNAME=	numpy-2.2.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=n/numpy/}
@@ -96,8 +96,8 @@ SUBST_MESSAGE.paths=	Fixing path to numpy-configure (for tests).
 SUBST_FILES.paths=	numpy/tests/test_configtool.py
 SUBST_SED.paths=	-e 's,'numpy-config','numpy-config-${PYVERSSUFFIX}',g'
 
-# as of 2.1.3
-# 35 failed, 46419 passed, 1712 skipped, 2799 deselected, 34 xfailed, 5 xpassed, 1 warning
+# as of 2.2.2
+# 35 failed, 46805 passed, 1742 skipped, 2811 deselected, 33 xfailed, 4 xpassed, 1 warning
 do-test:
 	cd ${WRKDIR} && \
 	${SETENV} ${TEST_ENV} PYTHONPATH=${DESTDIR}${PREFIX}/${PYSITELIB} ${PYTHONBIN} -c "import numpy; numpy.test()"
