--- a/x11/py-qt-builder/Makefile
+++ b/x11/py-qt-builder/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2024/12/29 09:04:49 adam Exp $
+# $NetBSD: Makefile,v 1.21 2025/01/19 19:34:04 wiz Exp $
 
-DISTNAME=	pyqt_builder-1.17.1
+DISTNAME=	pyqt_builder-1.17.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/pyqt_/qt-/}
 CATEGORIES=	x11 python
 MASTER_SITES=	${MASTER_SITE_PYPI:=P/PyQt-builder/}
