--- a/math/py-astropy-iers-data/Makefile
+++ b/math/py-astropy-iers-data/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.6 2024/11/11 07:28:40 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/20 07:54:15 wen Exp $
 
-DISTNAME=	astropy_iers_data-0.2024.9.30.0.32.59
+DISTNAME=	astropy_iers_data-0.2025.1.20.0.32.27
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/g}
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=a/astropy-iers-data/}
