--- a/devel/py-zconfig/Makefile
+++ b/devel/py-zconfig/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.29 2024/11/11 07:28:30 wiz Exp $
+# $NetBSD: Makefile,v 1.30 2025/01/20 08:24:33 adam Exp $
 
-DISTNAME=	zconfig-4.1
+DISTNAME=	zconfig-4.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=Z/ZConfig/}
@@ -19,8 +19,6 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-zope.exceptions-[0-9]*:../../devel/py-zope.excepti
 TEST_DEPENDS+=	${PYPKGPREFIX}-zope.testrunner-[0-9]*:../../devel/py-zope.testrunner
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 post-install:
 	cd ${DESTDIR}${PREFIX}/bin && \
