--- a/audio/mikmod/Makefile
+++ b/audio/mikmod/Makefile
@@ -1,16 +1,16 @@
-# $NetBSD: Makefile,v 1.57 2020/01/26 05:26:12 rillig Exp $
+# $NetBSD: Makefile,v 1.58 2025/01/20 10:24:10 adam Exp $
 
-DISTNAME=	mikmod-3.2.8
+DISTNAME=	mikmod-3.2.9
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=mikmod/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://mikmod.sourceforge.net/
+HOMEPAGE=	https://mikmod.sourceforge.net/
 COMMENT=	MOD player for UNI IT XM S3M MOD MTM STM DSM MED FAR ULT 669 files
 LICENSE=	gnu-gpl-v2
 
-USE_TOOLS+=		gmake
-GNU_CONFIGURE=		yes
+USE_TOOLS+=	gmake
+GNU_CONFIGURE=	yes
 
 .include "../../audio/libmikmod/buildlink3.mk"
 .include "../../mk/curses.buildlink3.mk"
