--- a/devel/py-msgpack/Makefile
+++ b/devel/py-msgpack/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.36 2024/11/11 07:28:16 wiz Exp $
+# $NetBSD: Makefile,v 1.37 2025/01/20 10:57:59 he Exp $
 
 DISTNAME=	msgpack-1.1.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -15,4 +15,5 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=69.5.1:../../devel/py-setuptools
 USE_LANGUAGES=	c c++
 
 .include "../../lang/python/wheel.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
