--- a/devel/py-protobuf/Makefile
+++ b/devel/py-protobuf/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.81 2025/01/09 13:09:18 adam Exp $
+# $NetBSD: Makefile,v 1.82 2025/01/20 10:58:59 he Exp $
 
 DISTNAME=	protobuf-5.29.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -18,4 +18,5 @@ USE_LANGUAGES+=		c c++
 MAKE_ENV+=	PROTOC=${PREFIX}/bin/protoc
 
 .include "../../lang/python/wheel.mk"
+.include "../../mk/atomic64.mk"
 .include "../../mk/bsd.pkg.mk"
