--- a/cad/librecad/Makefile
+++ b/cad/librecad/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.89 2025/01/19 16:59:31 riastradh Exp $
+# $NetBSD: Makefile,v 1.90 2025/01/20 19:27:51 riastradh Exp $
 
 DISTNAME=	LibreCAD-2.2.0-rc2
 PKGNAME=	${DISTNAME:tl:S/-rc2/.rc2/g}
@@ -22,6 +22,15 @@ FORCE_CXX_STD=	-std=c++14
 USE_TOOLS+=	pax pkg-config
 USE_LIBTOOL=	yes
 
+# Upstream declares a requirement of C++11 and uses -std=gnu++11 (at
+# least on NetBSD; can't figure out in 30sec of searching where the
+# argument comes from in the source code), but it uses boost.math,
+# which as of boost>=1.82 requires C++14:
+#
+# https://web.archive.org/web/20241120103157/https://www.boost.org/doc/libs/1_82_0/?view=category_math#lib-math
+#
+# So we explicitly delete the -std=gnu++11 argument and replace it by
+# -std=c++14 with FORCE_CXX_STD.
 BUILDLINK_TRANSFORM+=	rm:-std=gnu++11
 USE_CXX_FEATURES+=	c++14
 
