--- a/math/R/Makefile
+++ b/math/R/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.262 2024/12/27 08:20:16 wiz Exp $
+# $NetBSD: Makefile,v 1.263 2025/01/20 21:26:02 he Exp $
 
 #
 # If updating this package, please try to ensure PLIST.Darwin is kept in sync
 # to avoid unnecessarily breaking macOS users.
 #
 DISTNAME=	R-4.4.2
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_R_CRAN:=base/R-4/}
 
